--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "renta",
   "version": "0.0.0",
   "scripts": {
+    "json-server" : "json-server --watch db.json"
+    "serve" : "ng serve",
+    "start" : "run-p json-server serve",
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
